# FastApiDeliveryService

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: shipments.py  types.py
app/core/: db.py  settings.py
app/db/: models.py  recreate_tables.py  types.py
app/routes/: shipments.py
app/services/: shipment_types_service.py  shipments_service.py
app/tasks/: consumer.py  producer.py
app/utils/: delivery_price.py  session_id.py
tests/: conftest.py  test_shipments.py
