[project]
name = "fastapideliveryservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim",email = "maxsuslov7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.13.3,<0.14.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.1.0,<7.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)"
]
